src/objects/Affiliations__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Name (Entity / Individual)</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliated_Class_Code__c</fullName>
        <formula>TEXT(CM_Affiliated_Provider_Name__r.Class__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliated Class Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliated_Provider_Tax_Id__c</fullName>
        <label>Affiliated Provider Tax Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliated_to_Provider_Id__c</fullName>
        <formula>CM_Affiliated_Provider_Name__r.Prov_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prov Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliated_to_Service_PFIN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up relationship with Service and Payee location. Introduced as part of PPN-16597</description>
        <label>Affiliated to PFIN</label>
        <referenceTo>CM_SPL_Addr__c</referenceTo>
        <relationshipLabel>Affiliations</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliation_Type__c</fullName>
        <label>Affiliation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HCSYSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Address_1__c</fullName>
        <label>Billing Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_2__c</fullName>
        <label>Billing Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_County__c</fullName>
        <label>Billing County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Affiliated_Provider_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affiliated Provider Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliations</relationshipLabel>
        <relationshipName>Affiliations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_Affiliated_to_Billing_PFIN__c</fullName>
        <label>Affiliated to Billing PFIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Affiliated_to_Group_ID__c</fullName>
        <description>PPN:19298 Created to support dataload</description>
        <label>Affiliated to Group ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Affiliated_to_Network_Code__c</fullName>
        <label>Affiliated to Network Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Affiliated_to_Service_PFIN_Url__c</fullName>
        <description>This field is used to link the Service PFIN record on Affiliation .</description>
        <formula>HYPERLINK(&quot;/&quot;+Affiliated_to_Service_PFIN__r.Id,Affiliated_to_Service_PFIN__r.CM_SPL_PFIN_No__c)</formula>
        <label>Affiliated to PFIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Affiliated_to_Service_PFIN__c</fullName>
        <label>Affiliated to Service PFIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Affiliation_Code_Description__c</fullName>
        <label>Affiliation Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Billing_PFIN__c</fullName>
        <label>Billing PFIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Corporate_Entity_Code__c</fullName>
        <label>Corporate Entity Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Code__c</fullName>
        <description>This field created to copy Class code from Account and to display on Service and Payee related list. 
US story ref: PPN-16617</description>
        <formula>TEXT(Account__r.Class__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFF_DT__c</fullName>
        <label>EFF DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_DT__c</fullName>
        <label>End DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>Affiliation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity_Prov_Id__c</fullName>
        <description>This field introduced part of PPN-16597. Business ask is to display account Prov Id on affiliation related list displayed on Service and Payee location.</description>
        <formula>Account__r.Prov_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliated to Provider Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Master_Entity_Prov_ID__c</fullName>
        <formula>CM_Affiliated_Provider_Name__r.Prov_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Entity Prov ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFIN__c</fullName>
        <label>Service PFIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Converted to multi-select picklist as part of PPN-18792</description>
        <label>Role(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Assistant</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>Associate General Counsel</fullName>
                </value>
                <value>
                    <fullName>Biller</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Billing Clerk</fullName>
                </value>
                <value>
                    <fullName>Billing Manager</fullName>
                </value>
                <value>
                    <fullName>Billing Practice Manager</fullName>
                </value>
                <value>
                    <fullName>Billings Clinic</fullName>
                </value>
                <value>
                    <fullName>Business Manager</fullName>
                </value>
                <value>
                    <fullName>Business Office Manager</fullName>
                </value>
                <value>
                    <fullName>CAO</fullName>
                </value>
                <value>
                    <fullName>Case Management</fullName>
                </value>
                <value>
                    <fullName>Case Manager</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>CEO interim</fullName>
                </value>
                <value>
                    <fullName>Chief Dev Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Medical Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Operating Officer</fullName>
                </value>
                <value>
                    <fullName>Clinic Biller</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>Credentialing</fullName>
                </value>
                <value>
                    <fullName>Credentialing Coordinator</fullName>
                </value>
                <value>
                    <fullName>Dir. Payer Relations</fullName>
                </value>
                <value>
                    <fullName>Director of Care Coordination</fullName>
                </value>
                <value>
                    <fullName>Director of Finance</fullName>
                </value>
                <value>
                    <fullName>Director of Patient Accounting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roll_Down__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created part of PPN-17862 to check weather the user has been selected roll down  option or not.</description>
        <label>Roll Down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Physical City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_County__c</fullName>
        <label>Physical Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Location_1__c</fullName>
        <label>Physical Location 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Location_2__c</fullName>
        <label>Physical Location 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Physical State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip__c</fullName>
        <label>Physical Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Affiliation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF(NOT(CM_Affiliated_Provider_Name__r.IsPersonAccount), &apos;Entity&apos;, 
IF(AND(CM_Affiliated_Provider_Name__r.IsPersonAccount, ISPICKVAL(CM_Affiliated_Provider_Name__r.Class__c,&apos;P&apos;)),&apos;Physician&apos;, 
IF(AND(CM_Affiliated_Provider_Name__r.IsPersonAccount, CM_Affiliated_Provider_Name__r.RecordType.DeveloperName=&apos;Rolodex&apos;), 
&apos;Rolodex&apos;,&apos;&apos; 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fAccount_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fAffiliated_to_Provider_Id__c</fullName>
        <formula>CM_Affiliated_Provider_Name__r.Prov_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliated to Provider Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fNetwork_Code__c</fullName>
        <formula>CM_Affiliated_to_Network_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fTax_id__c</fullName>
        <formula>Affiliated_to_Service_PFIN__r.CM_SPA_Tax_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tMaster_Entity_Id__c</fullName>
        <formula>CM_Affiliated_Provider_Name__r.MSTR_ENTITY_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Entity Id</label>
        <type>Text</type>
    </fields>
    <label>Affiliations</label>
    <nameField>
        <displayFormat>A{0}</displayFormat>
        <label>Affiliation Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <recordTypes>
        <fullName>Affiliation</fullName>
        <active>true</active>
        <label>Affiliation for PPW</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Entity</fullName>
        <active>true</active>
        <label>Master Entity Affiliation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rolodex_Affiliation</fullName>
        <active>true</active>
        <label>Rolodex Affiliation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Corporate_Entity_Code_Validation</fullName>
        <active>true</active>
        <description>Validation rule for not changing the Plan ID.</description>
        <errorConditionFormula>OR( 
AND( 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
OR( 
NOT(CM_Corporate_Entity_Code__c =&quot;TX1&quot;), 
ISCHANGED(CM_Corporate_Entity_Code__c) 
), 
OR( 
$User.UserRoleId = &quot;00E410000015OiZ&quot;, 
$User.UserRoleId = &quot;00E41000000bXW1&quot;, 
$User.UserRoleId = &quot;00E41000000bXW0&quot; 
) 
), 
AND( 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
OR( 
NOT(CM_Corporate_Entity_Code__c =&quot;IL1&quot;), 
ISCHANGED(CM_Corporate_Entity_Code__c) 
), 
OR( 
$User.UserRoleId = &quot;00E410000015OiV&quot;, 
$User.UserRoleId = &quot;00E41000000bXVs&quot;, 
$User.UserRoleId = &quot;00E41000000bXVw&quot; 
) 
), 
AND( 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
OR( 
NOT(CM_Corporate_Entity_Code__c =&quot;MT1&quot;), 
ISCHANGED(CM_Corporate_Entity_Code__c) 
), 
OR( 
$User.UserRoleId = &quot;00E41000000bXVt&quot;, 
$User.UserRoleId = &quot;00E41000000bXVx&quot;  
) 
), 
AND( 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
OR( 
NOT(CM_Corporate_Entity_Code__c =&quot;OK1&quot;), 
ISCHANGED(CM_Corporate_Entity_Code__c) 
), 
OR( 
$User.UserRoleId = &quot;00E410000015OiY&quot;, 
$User.UserRoleId = &quot;00E41000000bXVv&quot;, 
$User.UserRoleId = &quot;00E41000000bXVz&quot; 
) 
), 
AND( 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
OR( 
NOT(CM_Corporate_Entity_Code__c =&quot;NM1&quot;), 
ISCHANGED(CM_Corporate_Entity_Code__c) 
), 
OR( 
$User.UserRoleId = &quot;00E410000015OiX&quot;, 
$User.UserRoleId = &quot;00E41000000bXVu&quot;, 
$User.UserRoleId = &quot;00E41000000bXVy&quot;  
) 
) 
)</errorConditionFormula>
        <errorMessage>Corporate Entity Code is ReadOnly and not allowed to change</errorMessage>
    </validationRules>
</CustomObject>